--- a/web/templates/employer-dashboard-post-job.html
+++ b/web/templates/employer-dashboard-post-job.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oficiona</title>
+    <title>Concordia Ace</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href={% static "assets/css/bootstrap.min.css" %}>
@@ -51,51 +51,20 @@
           <div class="col">
             <div class="header-top">
               <div class="logo-area">
-                <a href="index.html"><img src={% static "images/logo-2.png" %}alt=""></a>
+                <a href="/"><img src={% static "images/concordia-logo.png" %} alt=""></a>
               </div>
               <div class="header-top-toggler">
                 <div class="header-top-toggler-button"></div>
               </div>
               <div class="top-nav">
-                <div class="dropdown header-top-notification">
-                  <a href="#" class="notification-button">Notification</a>
-                  <div class="notification-card">
-                    <div class="notification-head">
-                      <span>Notifications</span>
-                      <a href="#">Mark all as read</a>
-                    </div>
-                    <div class="notification-body">
-                      <a href="home-2.html" class="notification-list">
-                        <i class="fas fa-bolt"></i>
-                        <p>Your Resume Updated!</p>
-                        <span class="time">5 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-arrow-circle-down"></i>
-                        <p>Someone downloaded resume</p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-check-square"></i>
-                        <p>You applied for Project Manager <span>@homeland</span></p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-user"></i>
-                        <p>You changed password</p>
-                        <span class="time">5 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-arrow-circle-down"></i>
-                        <p>Someone downloaded resume</p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                    </div>
-                    <div class="notification-footer">
-                      <a href="#">See all notification</a>
-                    </div>
-                  </div>
-                </div>
+                    {% if user.user_type == 2%}
+                      <a href="/jobApplications/"><span class="ti-user"></span> Dashboard </a>
+                    {% endif %}
+
+                    {% if user.user_type == 4 %}
+                      <a href="/jobApplications/"><span class="ti-user"></span> Dashboard </a>
+                      <a href="/admin"><span class="ti-user"></span> Admin DB </a>
+                    {% endif %}
                 <div class="dropdown header-top-account">
                   <a href="#" class="account-button">My Account</a>
                   <div class="account-card">
@@ -103,22 +72,18 @@
                       <a href="#" class="account-thumb">
                         <img src="images/account/thumb-1.jpg" class="img-fluid" alt="">
                       </a>
+                      {% if user.is_authenticated %}
                       <div class="account-body">
-                        <h5><a href="#">Robert Chavez</a></h5>
-                        <span class="mail">chavez@domain.com</span>
+                        <h5><a href="#">{{user.firstName}} {{user.lastName}}</a></h5>
+                        <span class="mail">{{user.email}}</span>
                       </div>
+                      {% endif %}
                     </div>
                     <ul class="account-item-list">
-                      <li><a href="#"><span class="ti-user"></span>Account</a></li>
-                      <li><a href="#"><span class="ti-settings"></span>Settings</a></li>
-                      <li><a href="#"><span class="ti-power-off"></span>Log Out</a></li>
+                      <li><a href="/logout"><span class="ti-power-off"></span>Log Out</a></li>
                     </ul>
                   </div>
                 </div>
-                <select class="selectpicker select-language" data-width="fit">
-                  <option data-content='<span class="flag-icon flag-icon-us"></span> English'>English</option>
-                  <option  data-content='<span class="flag-icon flag-icon-mx"></span> Español'>Español</option>
-                </select>
               </div>
             </div>
             <nav class="navbar navbar-expand-lg cp-nav-2">
@@ -127,90 +92,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="menu-item active"><a title="Home" href="home-1.html">Home</a></li>
-                  <li class="menu-item dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Jobs</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="job-listing.html">Job Listing</a></li>
-                      <li class="menu-item"><a  href="job-listing-with-map.html">Job Listing With Map</a></li>
-                      <li class="menu-item"><a  href="job-details.html">Job Details</a></li>
-                      <!-- <li class="menu-item"><a  href="post-job.html">Post Job</a></li> -->
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidates</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="candidate.html">Candidate Listing</a></li>
-                      <li class="menu-item"><a  href="candidate-details.html">Candidate Details</a></li>
-                      <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employers</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="employer-listing.html">Employer Listing</a></li>
-                      <li class="menu-item"><a  href="employer-details.html">Employer Details</a></li>
-                      <li class="menu-item"><a  href="employer-dashboard-post-job.html">Post a Job</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidate Dashboard</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a  href="dashboard.html">Dashboard</a></li>
-                          <li class="menu-item"><a  href="dashboard-edit-profile.html">Edit Profile</a></li>
-                          <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
-                          <li class="menu-item"><a  href="resume.html">Resume</a></li>
-                          <li class="menu-item"><a  href="edit-resume.html">Edit Resume</a></li>
-                          <li class="menu-item"><a  href="dashboard-bookmark.html">Bookmarked</a></li>
-                          <li class="menu-item"><a  href="dashboard-applied.html">Applied</a></li>
-                          <li class="menu-item"><a  href="dashboard-pricing.html">Pricing</a></li>
-                          <li class="menu-item"><a  href="dashboard-message.html">Message</a></li>
-                          <li class="menu-item"><a  href="dashboard-alert.html">Alert</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employer Dashboard</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a href="employer-dashboard.html">Employer Dashboard</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-manage-candidate.html">Manage Candidate</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-manage-job.html">Manage Job</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-message.html">Dashboard Message</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-pricing.html">Dashboard Pricing</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-post-job.html">Post Job</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                      <li class="menu-item"><a href="how-it-work.html">How It Works</a></li>
-                      <li class="menu-item"><a href="pricing.html">Pricing Plan</a></li>
-                      <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">News &amp; Advices</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a href="blog.html">News</a></li>
-                          <li class="menu-item"><a href="blog-grid.html">News Grid</a></li>
-                          <li class="menu-item"><a href="blog-details.html">News Details</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item"><a href="checkout.html">Checkout</a></li>
-                      <li class="menu-item"><a href="payment-complete.html">Payment Complete</a></li>
-                      <li class="menu-item"><a href="invoice.html">Invoice</a></li>
-                      <li class="menu-item"><a href="terms-and-condition.html">Terms And Condition</a></li>
-                      <li class="menu-item"><a href="404.html">404 Page</a></li>
-                      <li class="menu-item"><a href="login.html">Login</a></li>
-                      <li class="menu-item"><a href="register.html">Register</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                  <li class="menu-item post-job"><a href="post-job.html"><i class="fas fa-plus"></i>Post a Job</a></li>
+                  <li class="menu-item active"><a title="Home" href="/">Home</a></li>
                 </ul>
               </div>
             </nav>
@@ -228,7 +110,7 @@
               <h1>Employer Dashboard</h1>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item"><a href="/">Home</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Employer Dashboard</li>
                 </ol>
               </nav>
@@ -561,15 +443,15 @@
                   <ul>
                     <li><i class="fas fa-home"></i><a href="employer-dashboard.html">Dashboard</a></li>
                     <li><i class="fas fa-user"></i><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
-                    <li><i class="fas fa-briefcase"></i><a href="employer-dashboard-manage-job.html">Manage Jobs</a></li>
+                    <li><i class="fas fa-briefcase"></i><a href="/manageJobs">Manage Jobs</a></li>
                     <li><i class="fas fa-users"></i><a href="employer-dashboard-manage-candidate.html">Manage Candidates</a></li>
                     <li><i class="fas fa-heart"></i><a href="#">Shortlisted Resumes</a></li>
-                    <li class="active"><i class="fas fa-plus-square"></i><a href="employer-dashboard-post-job.html">Post New Job</a></li>
+                    <li class="active"><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
                     <li><i class="fas fa-comment"></i><a href="employer-dashboard-message.html">Message</a></li>
                     <li><i class="fas fa-calculator"></i><a href="employer-dashboard-pricing.html">Pricing Plans</a></li>
                   </ul>
                   <ul class="delete">
-                    <li><i class="fas fa-power-off"></i><a href="#">Logout</a></li>
+                    <li><i class="fas fa-power-off"></i><a href="/logout">Logout</a></li>
                     <li><i class="fas fa-trash-alt"></i><a href="#" data-toggle="modal" data-target="#modal-delete">Delete Profile</a></li>
                   </ul>
                   <!-- Modal -->
@@ -611,13 +493,13 @@
           <div class="col">
             <div class="call-to-action-2">
               <div class="call-to-action-content">
-                <h2>For Find Your Dream Job or Candidate</h2>
-                <p>Add resume or post a job. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.</p>
+                <h2>Concordia University Ace Program</h2>
+                <p>Find your next 8-16 months internship</p>
               </div>
               <div class="call-to-action-button">
-                <a href="add-resume.html" class="button">Add Resume</a>
+                <a href="/search/" class="button">Browse</a>
                 <span>Or</span>
-                <a href="post-job.html" class="button">Post A Job</a>
+                <a href="/employer-dashboard-post-job" class="button">Post A Job</a>
               </div>
             </div>
           </div>
@@ -673,7 +555,7 @@
                 <h4>Job Seekers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
+                    <li><a href="/register">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
                     <li><a href="#">My Oficiona</a></li>
                     <li><a href="#">FAQ</a></li>
@@ -687,9 +569,9 @@
                 <h4>Employers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
+                    <li><a href="/register">Create Account</a></li>
                     <li><a href="#">Products/Service</a></li>
-                    <li><a href="#">Post a Job</a></li>
+                    <li><a href="/employer-dashboard-post-job">Post a Job</a></li>
                     <li><a href="#">FAQ</a></li>
                   </ul>
                 </div>
