--- a/web/templates/home-4.html
+++ b/web/templates/home-4.html
@@ -59,7 +59,7 @@
           <div class="col-12">
             <div class="banner-content">
               <h1>Find your Next ACE Internship</h1>
-              <p> Concordia Institute for Co-operative Education</p>
+              <a href= "https://www.concordia.ca/academics/co-op.html"> <p> Concordia Institute for Co-operative Education</p></a>
                   <div id="container">
                     <div class="button_2" id="button-5" onclick="window.location='/search';">
                       <div id="translate"></div>
@@ -257,8 +257,8 @@
               <div class="fact-icon">
                 <i data-feather="briefcase"></i>
               </div>
-              <p class="fact-number"><span class="count" data-form="0" data-to="12376"></span></p>
-              <p class="fact-name">Live Jobs</p>
+              <p class="fact-number"><span class="count" data-form="0" data-to="{{jobCount}}"></span></p>
+              <p class="fact-name">Jobs posted</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -266,7 +266,7 @@
               <div class="fact-icon">
                 <i data-feather="users"></i>
               </div>
-              <p class="fact-number"><span class="count" data-form="0" data-to="89562"></span></p>
+              <p class="fact-number"><span class="count" data-form="0" data-to="{{candidateCount}}"></span></p>
               <p class="fact-name">Candidate</p>
             </div>
           </div>
@@ -275,8 +275,8 @@
               <div class="fact-icon">
                 <i data-feather="file-text"></i>
               </div>
-              <p class="fact-number"><span class="count" data-form="0" data-to="28166"></span></p>
-              <p class="fact-name">Resume</p>
+              <p class="fact-number"><span class="count" data-form="0" data-to="{{applicationCount}}"></span></p>
+              <p class="fact-name">Applications</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -284,7 +284,7 @@
               <div class="fact-icon">
                 <i data-feather="award"></i>
               </div>
-              <p class="fact-number"><span class="count" data-form="0" data-to="1366"></span></p>
+              <p class="fact-number"><span class="count" data-form="0" data-to="{{companyCount}}"></span></p>
               <p class="fact-name">Companies</p>
             </div>
           </div>
@@ -293,89 +293,14 @@
     </div>
     <!-- Fun Facts End -->
 
-    <!-- Testimonial -->
-    <div class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="testimonial">
-              <div class="testimonial-quote">
-                <img src="images/testimonial/quote.png" class="img-fluid" alt="">
-              </div>
-              <div class="testimonial-for">
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob One”</p>
-                  <h5>Maria Marlin @ Google</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Two”</p>
-                  <h5>Laura Harper @ Amazon</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Three”</p>
-                  <h5>John Doe @ Envato</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Four”</p>
-                  <h5>Jenny Doe @ Dribbble</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Five”</p>
-                  <h5>Michle Clark @ Apple</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Two”</p>
-                  <h5>Laura Harper @ Amazon</h5>
-                </div>
-                <div class="testimonial-item">
-                  <p>“On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charmsto send our denim shorts wardrob Three”</p>
-                  <h5>John Doe @ Envato</h5>
-                </div>
-              </div>
-              <div class="testimonial-nav">
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-1.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/1.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-2.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/2.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-3.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/3.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-4.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/4.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-5.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/5.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-2.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/2.png" class="comapnyLogo" alt="">
-                </div>
-                <div class="commenter-thumb">
-                  <img src="images/testimonial/thumb-3.jpg" class="img-fluid commenter" alt="">
-                  <img src="images/testimonial/3.png" class="comapnyLogo" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
-
     <!-- Career Advice -->
+    <div class="padding-top-90">
     <div class="padding-bottom-90">
       <div class="container">
         <div class="row">
           <div class="col">
             <div class="section-header">
-              <h2>Career Advice</h2>
+              <h2>Upcoming Events</h2>
             </div>
           </div>
         </div>
@@ -383,44 +308,42 @@
           <div class="col-md-6 col-lg-4">
             <article class="blog-grid">
               <div class="body">
-                <span class="date">22 <span>Dec</span></span>
-                <h3><a href= "blog-details.html">Who chooses to enjoy a pleasure</a></h3>
-                <p>Combined with a handful of model sentence structures, to generate lorem Ipsum which</p>
+                <span class="date">22 <span>Jun</span></span>
+                <h3><a href= "blog-details.html">Application Deadline</a></h3>
+                <p>The application deadline for all current jobs is June 22th</p>
               </div>
               <div class="info">
-                <span class="author"><a href= "#"><i data-feather="user"></i>Robert Karlos</a></span>
-                <span class="comments"><a href= "#"><i data-feather="message-circle"></i>42</a></span>
+                <span class="author"><a href= "#"><i data-feather="user"></i>ACE team</a></span>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-4">
             <article class="blog-grid">
               <div class="body">
-                <span class="date">22 <span>Dec</span></span>
-                <h3><a href= "blog-details.html">Who chooses to enjoy a pleasure</a></h3>
-                <p>Combined with a handful of model sentence structures, to generate lorem Ipsum which</p>
+                <span class="date">29 <span>Aug</span></span>
+                <h3><a href= "blog-details.html">Last Day of Rankings</a></h3>
+                <p>Please submit all rankings by August 29th</p>
               </div>
               <div class="info">
-                <span class="author"><a href= "#"><i data-feather="user"></i>Robert Karlos</a></span>
-                <span class="comments"><a href= "#"><i data-feather="message-circle"></i>42</a></span>
+                <span class="author"><a href= "#"><i data-feather="user"></i>Ace Team</a></span>
               </div>
             </article>
           </div>
           <div class="col-md-6 col-lg-4">
             <article class="blog-grid">
               <div class="body">
-                <span class="date">22 <span>Dec</span></span>
-                <h3><a href= "blog-details.html">Who chooses to enjoy a pleasure</a></h3>
-                <p>Combined with a handful of model sentence structures, to generate lorem Ipsum which</p>
+                <span class="date">1 <span>Sep</span></span>
+                <h3><a href= "blog-details.html">Match day</a></h3>
+                <p>Match will be made available at around Noon</p>
               </div>
               <div class="info">
-                <span class="author"><a href= "#"><i data-feather="user"></i>Robert Karlos</a></span>
-                <span class="comments"><a href= "#"><i data-feather="message-circle"></i>42</a></span>
+                <span class="author"><a href= "#"><i data-feather="user"></i>Ace Team</a></span>
               </div>
             </article>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <!-- Career Advice End -->
 
