--- a/web/templates/job-listing.html
+++ b/web/templates/job-listing.html
@@ -51,70 +51,48 @@
           <div class="col">
             <div class="header-top">
               <div class="logo-area">
-                <a href="../"><img src={% static "images/concordia-logo.png" %} alt=""></a>
+                <a href="/"><img src={% static "images/concordia-logo.png" %} alt=""></a>
               </div>
               <div class="header-top-toggler">
                 <div class="header-top-toggler-button"></div>
               </div>
               <div class="top-nav">
-                <div class="dropdown header-top-notification">
-                  <a href="#" class="notification-button">Notification</a>
-                  <div class="notification-card">
-                    <div class="notification-head">
-                      <span>Notifications</span>
-                      <a href="#">Mark all as read</a>
-                    </div>
-                    <div class="notification-body">
-                      <a href="home-2.html" class="notification-list">
-                        <i class="fas fa-bolt"></i>
-                        <p>Your Resume Updated!</p>
-                        <span class="time">5 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-arrow-circle-down"></i>
-                        <p>Someone downloaded resume</p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-check-square"></i>
-                        <p>You applied for Project Manager <span>@homeland</span></p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-user"></i>
-                        <p>You changed password</p>
-                        <span class="time">5 hours ago</span>
-                      </a>
-                      <a href="#" class="notification-list">
-                        <i class="fas fa-arrow-circle-down"></i>
-                        <p>Someone downloaded resume</p>
-                        <span class="time">11 hours ago</span>
-                      </a>
-                    </div>
-                    <div class="notification-footer">
-                      <a href="#">See all notification</a>
-                    </div>
-                  </div>
-                </div>
+                    {% if user.user_type == 2%}
+                      <a href="/jobApplications/"><span class="ti-user"></span> Dashboard </a>
+                    {% endif %}
+
+                    {% if user.user_type == 4 %}
+                      <a href="/jobApplications/"><span class="ti-user"></span> Dashboard </a>
+                      <a href="/admin"><span class="ti-user"></span> Admin DB </a>
+                    {% endif %}
+                {% if user.is_authenticated %}
                 <div class="dropdown header-top-account">
                   <a href="#" class="account-button">My Account</a>
                   <div class="account-card">
                     <div class="header-top-account-info">
                       <a href="#" class="account-thumb">
-                        <img src={% static "images/account/thumb-1.jpg" %} class="img-fluid" alt="">
+                        <img src="images/account/thumb-1.jpg" class="img-fluid" alt="">
                       </a>
+                      
                       <div class="account-body">
-                        <h5><a href="#">Robert Chavez</a></h5>
-                        <span class="mail">chavez@domain.com</span>
+                        <h5><a href="#">{{user.firstName}} {{user.lastName}}</a></h5>
+                        <span class="mail">{{user.email}}</span>
                       </div>
+                      
                     </div>
                     <ul class="account-item-list">
-                      <li><a href="#"><span class="ti-user"></span>Account</a></li>
-                      <li><a href="#"><span class="ti-settings"></span>Settings</a></li>
-                      <li><a href="#"><span class="ti-power-off"></span>Log Out</a></li>
+                      <li><a href="/logout"><span class="ti-power-off"></span>Log Out</a></li>
                     </ul>
                   </div>
                 </div>
+                {% else %}
+                <ul class="account-item-list">
+                  <a href="/login">Login </a>
+                </ul>
+                <ul class="account-item-list">
+                  <a href="/register">Registration </a>
+                </ul>
+                {% endif %}
               </div>
             </div>
             <nav class="navbar navbar-expand-lg cp-nav-2">
@@ -124,89 +102,6 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="menu-item active"><a title="Home" href="/">Home</a></li>
-                  <li class="menu-item dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Jobs</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="job-listing.html">Job Listing</a></li>
-                      <li class="menu-item"><a  href="job-listing-with-map.html">Job Listing With Map</a></li>
-                      <li class="menu-item"><a  href="job-details.html">Job Details</a></li>
-                      <!-- <li class="menu-item"><a  href="post-job.html">Post Job</a></li> -->
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidates</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="candidate.html">Candidate Listing</a></li>
-                      <li class="menu-item"><a  href="candidate-details.html">Candidate Details</a></li>
-                      <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employers</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a  href="employer-listing.html">Employer Listing</a></li>
-                      <li class="menu-item"><a  href="employer-details.html">Employer Details</a></li>
-                      <li class="menu-item"><a  href="employer-dashboard-post-job.html">Post a Job</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidate Dashboard</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a  href="dashboard.html">Dashboard</a></li>
-                          <li class="menu-item"><a  href="dashboard-edit-profile.html">Edit Profile</a></li>
-                          <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
-                          <li class="menu-item"><a  href="resume.html">Resume</a></li>
-                          <li class="menu-item"><a  href="edit-resume.html">Edit Resume</a></li>
-                          <li class="menu-item"><a  href="dashboard-bookmark.html">Bookmarked</a></li>
-                          <li class="menu-item"><a  href="dashboard-applied.html">Applied</a></li>
-                          <li class="menu-item"><a  href="dashboard-pricing.html">Pricing</a></li>
-                          <li class="menu-item"><a  href="dashboard-message.html">Message</a></li>
-                          <li class="menu-item"><a  href="dashboard-alert.html">Alert</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employer Dashboard</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a href="employer-dashboard.html">Employer Dashboard</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-manage-candidate.html">Manage Candidate</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-manage-job.html">Manage Job</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-message.html">Dashboard Message</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-pricing.html">Dashboard Pricing</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-post-job.html">Post Job</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item dropdown">
-                    <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
-                    <ul  class="dropdown-menu">
-                      <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                      <li class="menu-item"><a href="how-it-work.html">How It Works</a></li>
-                      <li class="menu-item"><a href="pricing.html">Pricing Plan</a></li>
-                      <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                      <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">News &amp; Advices</a>
-                        <ul class="dropdown-menu">
-                          <li class="menu-item"><a href="blog.html">News</a></li>
-                          <li class="menu-item"><a href="blog-grid.html">News Grid</a></li>
-                          <li class="menu-item"><a href="blog-details.html">News Details</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item"><a href="checkout.html">Checkout</a></li>
-                      <li class="menu-item"><a href="payment-complete.html">Payment Complete</a></li>
-                      <li class="menu-item"><a href="invoice.html">Invoice</a></li>
-                      <li class="menu-item"><a href="terms-and-condition.html">Terms And Condition</a></li>
-                      <li class="menu-item"><a href="404.html">404 Page</a></li>
-                      <li class="menu-item"><a href="login.html">Login</a></li>
-                      <li class="menu-item"><a href="register.html">Register</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                  <li class="menu-item post-job"><a href="post-job.html"><i class="fas fa-plus"></i>Post a Job</a></li>
                 </ul>
               </div>
             </nav>
@@ -232,10 +127,6 @@
           </div>
           <div class="col-md-6">
             <div class="breadcrumb-form">
-              <form action="#">
-                <input type="text" placeholder="Enter Keywords">
-                <button><i data-feather="search"></i></button>
-              </form>
             </div>
           </div>
         </div>
@@ -421,6 +312,31 @@
     <!-- Job Listing End -->
 
     <!-- Footer -->
+    <footer class="footer-bg">
+      <div class="footer-top border-bottom section-padding-top padding-bottom-40">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="footer-logo">
+                <a href= "#">
+                  <img src="images/footer-logo.png" class="img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="footer-social">
+                <ul class="social-icons">
+                  <li><a href= "https://www.facebook.com/concordiacoop"><i data-feather="facebook"></i></a></li>
+                  <li><a href= "https://twitter.com/concordiacoop"><i data-feather="twitter"></i></a></li>
+                  <li><a href= "http://www.linkedin.com/groups/Concordia-Coop-Institute-Cooperative-Education-3214761/about"><i data-feather="linkedin"></i></a></li>
+                  <li><a href= "https://www.instagram.com/concordiacoop/?hl=en"><i data-feather="instagram"></i></a></li>
+                  <li><a href= "https://www.youtube.com/user/ConcordiaUni"><i data-feather="youtube"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="footer-widget-wrapper padding-bottom-60 padding-top-80">
         <div class="container">
           <div class="row">
@@ -429,10 +345,10 @@
                 <h4>Information</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms &amp; Conditions</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op.html">About Us</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/contact.html">Contact Us</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/programs/accelerated-career-experience.html">Terms &amp; Conditions</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/students/fees.html">Fees</a></li>
                   </ul>
                 </div>
               </div>
@@ -442,11 +358,8 @@
                 <h4>Job Seekers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
-                    <li><a href="#">Career Counseling</a></li>
-                    <li><a href="#">My Oficiona</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Video Guides</a></li>
+                    <li><a href= "/register/2">Create Account</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/students/career-development/services-counselling.html">Career Counseling</a></li>
                   </ul>
                 </div>
               </div>
@@ -456,10 +369,10 @@
                 <h4>Employers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
-                    <li><a href="#">Products/Service</a></li>
-                    <li><a href="#">Post a Job</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href= "/register/2">Create Account</a></li>
+                    <li><a href= "/employer-dashboard-post-job">Post a Job</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/employers/benefits-for-employers.html">FAQ</a></li>
+                    <li><a href= "https://www.concordia.ca/academics/co-op/students/fees.html">Fees</a></li>
                   </ul>
                 </div>
               </div>
@@ -467,15 +380,34 @@
             <div class="col-lg-5 offset-lg-1 col-sm-6">
               <div class="footer-widget footer-newsletter">
                 <h4>Newsletter</h4>
-                <p>Get e-mail updates about our latest news and Special offers.</p>
+                <p>Get e-mail updates about our latest news and upcoming events.</p>
                 <form action="#" class="newsletter-form form-inline">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Email address...">
                   </div>
-                  <button class="btn button primary-bg">Submit<i class="fas fa-caret-right"></i></button>
-                  <p class="newsletter-error">0 - Please enter a value</p>
-                  <p class="newsletter-success">Thank you for subscribing!</p>
+                  <button class="btn button primary-bg">Coming soon<i class="fas fa-caret-right"></i></button>
                 </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom-area">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="footer-bottom border-top">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
+                    <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="back-to-top">
+                      <a href= "#">Back to top<i class="fas fa-angle-up"></i></a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
